# spacegame

./: .gitignore  CLAUDE.md  README.md
Assets/Prefabs/: CourseLine.prefab  GhostShip.prefab  Ship.prefab
Assets/Scenes/: SampleScene.unity
Assets/Scripts/: ActionsQueue.cs  GameDisplayer.cs  ServerPinger.cs  Ship.cs
backend/api/: views.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: api.py  config.py  pyproject.toml
frontend/src/mm/: api.py  cli.py
