[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mm-cli"
version = "0.1.0"
description = "Command-line interface for MonsterMakers"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.scripts]
mm = "mm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
